test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: default # Or any namespace not excluded by the webhook
spec:
  containers:
  - name: nginx
    image: nginx:latest
  # This pod has no tolerations.
  # After creation, the spot-injector webhook should add the following toleration:
  # tolerations:
  # - key: "kubernetes.azure.com/scalesetpriority"
  #   operator: "Equal"
  #   value: "spot"
  #   effect: "NoSchedule"
